--- a/Exam.Api/appsettings.json
+++ b/Exam.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgresqlDbConnection": "Host=form-craft.ddns.net;Port=5433;Database=bank_db;Username=admin;Password=admin"
+  }
 }
